--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "format": "prettier -w ./src"
     },
     "dependencies": {
+        "chart.js": "^4.4.2",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.3"
     },
